--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
-DATABASE_URL=
-JWT_SECRET=
+# 数据库配置
+DATABASE_URL=postgresql://postgres:password@localhost:5432/{{database_name}}
+
+# JWT密钥 (生产环境请使用强密码)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 
 # Tracing 环境变量
 RUST_LOG=info,axum=debug,tower_http=debug
