--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # 数据库配置
-DATABASE_URL=postgresql://postgres:password@localhost:5432/{{database_name}}
+DATABASE_URL=postgresql://postgres:password@localhost:5432/{{project-name | snake_case}}_db
 
 # JWT密钥 (生产环境请使用强密码)
-JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_SECRET=your-secret-jwt-key
 
 # Tracing 环境变量
 RUST_LOG=info,axum=debug,tower_http=debug
@@ -15,3 +15,8 @@ RUST_LOG=info,axum=debug,tower_http=debug
 # APP_DATABASE_POOL_TIMEOUT=60
 # APP_LOGGING_LEVEL=debug
 # APP_LOGGING_FORMAT=json
+
+# 日志配置覆盖（可选）
+LOG_FILE_DIR=/var/log/myapp     
+LOG_ROTATION=daily            
+LOG_CONSOLE=false         
