优化了结构

--- a/.env.example
+++ b/.env.example
@@ -1,22 +1,43 @@
-# 数据库配置
+# 数据库配置（必需）
 DATABASE_URL=postgresql://postgres:password@localhost:5432/{{project-name | snake_case}}_db
 
-# JWT密钥 (生产环境请使用强密码)
-JWT_SECRET=your-secret-jwt-key
+# 敏感信息配置
+# JWT 密钥（必需，至少 32 个字符）
+JWT_SECRET=your-secret-jwt-key-at-least-32-characters
+
+# Redis 配置（可选，不配置则跳过 Redis 初始化）
+# REDIS_URL=redis://localhost:6379
+# REDIS_URL=redis://:password@localhost:6379/0
+# REDIS_URL=redis://:password@redis-cluster.example.com:6380/1
 
 # Tracing 环境变量
 RUST_LOG=info,axum=debug,tower_http=debug
 
 # 应用配置覆盖（使用 APP_ 前缀）
+# 注意：数组类型配置（如 CORS 的 allow_origins）建议在 config.toml 中设置，
+#       环境变量主要用于覆盖简单的标量值。
+
+# 服务器配置
 # APP_SERVER_HOST=0.0.0.0
-# APP_SERVER_PORT=8080
+# APP_SERVER_PORT=3001
 # APP_SERVER_TIMEOUT=60
+
+# 数据库配置
 # APP_DATABASE_MAX_CONNECTIONS=20
 # APP_DATABASE_POOL_TIMEOUT=60
-# APP_LOGGING_LEVEL=debug
-# APP_LOGGING_FORMAT=json
 
-# 日志配置覆盖（可选）
-LOG_FILE_DIR=/var/log/myapp     
-LOG_ROTATION=daily            
-LOG_CONSOLE=false         
+# 日志配置
+# APP_LOGGING_LEVEL=debug
+# APP_LOGGING_CONSOLE_FORMAT=pretty
+# APP_LOGGING_CONSOLE=true
+# APP_LOGGING_FILE=true
+# APP_LOGGING_FILE_DIR=/var/log/myapp
+# APP_LOGGING_FILE_PREFIX=app
+# APP_LOGGING_ROTATION=daily
+# APP_LOGGING_MAX_FILES=30
+# APP_LOGGING_CLEANUP_ENABLED=true
+# APP_LOGGING_CLEANUP_INTERVAL=168  # 支持格式: 168、"7x24"、"7d"、"168h"
+
+# CORS 配置（建议在 config.toml 中配置数组类型，这里仅作示例）
+# APP_CORS_ALLOW_CREDENTIALS=true
+# APP_CORS_MAX_AGE=7200
