--- a/app/Cargo.toml
+++ b/app/Cargo.toml
@@ -22,11 +22,18 @@ sea-orm = { workspace = true }
 serde = { workspace = true }
 tokio = { version = "1.45.1", features = ["full"] }
 tower = { version = "0.5.2", features = ["timeout", "buffer", "limit"] }
-tower-http = {version = "0.6.6", features = ["trace","cors","fs"]}
+tower-http = { version = "0.6.6", features = [
+    "trace",
+    "cors",
+    "fs",
+    "compression-br",
+    "compression-deflate",
+    "compression-gzip",
+] }
 uuid = { version = "1.17.0", features = ["v4", "serde"] }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
-schemars = { version = "0.9.0", features = ["derive", "chrono04", "uuid1"] }
+schemars = { workspace = true }
 entity = { path = "../entity" }
 migration = { path = "../migration" }
 serde_json = "1.0.140"
@@ -35,3 +42,15 @@ thiserror = "2.0.12"
 dotenvy = "0.15.7"
 anyhow = "1.0.98"
 tracing-appender = "0.2.3"
+config = "0.15.18"
+deadpool-redis = { version = "0.22.0", features = ["rt_tokio_1", "serde"] }
+tower_governor = { version = "0.8.0", features = ["tracing"] }
+validator = { workspace = true }
+strum = { workspace = true }
+num_enum = { workspace = true }
+sonyflake = { workspace = true }
+harsh = { workspace = true }
+sqids = { workspace = true }
+jsonwebtoken = { version = "10.2.0", features = ["use_pem", "rust_crypto"] }
+argon2 = "0.5.3"
+rand = "0.9.2"
