--- a/entity/Cargo.toml
+++ b/entity/Cargo.toml
@@ -5,3 +5,8 @@ edition = "2024"
 
 [dependencies]
 sea-orm = { workspace = true }
+validator = { workspace = true }
+strum = { workspace = true }
+num_enum = { workspace = true }
+schemars = { workspace = true }
+serde = { workspace = true }
