--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [workspace]
-members = ["app", "entity", "migration"]
+members = ["app", "entity", "migration", "dev-tools"]
 resolver = "3"
 authors = ["{{author_name}}"]
 license = "MIT"
 repository = "https://github.com/{{authors}}/{{project-name}}"
 
 [workspace.dependencies]
-sea-orm = { version = "1.1.17", features = [
+sea-orm = { version = "1.1.19", features = [
     "macros",
     "debug-print",
     "with-chrono",
